[gd_scene load_steps=3 format=3 uid="uid://d522vv118uh0"]

[ext_resource type="Script" path="res://UI/extraScenes/scripts/death_scene_buttons.gd" id="1_jfse1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ufb2t"]
bg_color = Color(1, 1, 1, 0.701961)
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 0.196078, 0.196078, 1)

[node name="DeathSceneButtons" type="Control"]
custom_minimum_size = Vector2(100, 80)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_jfse1")

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(100, 80)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_ufb2t")
text = "Text"

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
